--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #8a639a;
+  --ifm-color-primary-dark: #885499;
+  --ifm-color-primary-darker: #6b3f93;
+  --ifm-color-primary-darkest: #5e2294;
+  --ifm-color-primary-light: #da6b6c;
+  --ifm-color-primary-lighter: #e79394;
+  --ifm-color-primary-lightest: #dca9a9;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
